new proj/src/objects/Customer_SPA_PDQ__c.object
<CustomObject>
    <fields>
        <fullName>GE_DE_DUNS_No__c</fullName>
        <label>DUNS Number</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DE_Duns_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DUNS Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer SPA PDQs</relationshipLabel>
        <relationshipName>Customer_SPA_PDQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_DE_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_DE_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_DE_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DE_GO_Schedule__c</fullName>
        <label>GO Schedule</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DE_Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_DE_Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DE_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DE_SPA_Line__c</fullName>
        <label>SPA Line</label>
        <picklist>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DE_SPA_Type__c</fullName>
        <label>SPA Type</label>
        <picklist>
            <picklistValues>
                <fullName>SPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DE_Tier1__c</fullName>
        <label>Tier 1</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DE_Tier2__c</fullName>
        <label>Tier 2</label>
        <picklist>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_DE_Tier3__c</fullName>
        <label>Tier 3</label>
        <picklist>
            <picklistValues>
                <fullName>Smart Grid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer SPA PDQ</label>
    <nameField>
        <displayFormat>DN-{000000000}</displayFormat>
        <label>Discount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer SPA PDQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>